--- a/build.gradle
+++ b/build.gradle
@@ -387,7 +387,7 @@ catch (Exception ignored) {
             'or the VERSION override must be set! ').style(Style.SuccessHeader).text('(Do NOT download from GitHub using the ZIP option, instead\n' +
         'clone the repository, see ').style(Style.Info).text('https://gtnh.miraheze.org/wiki/Development').style(Style.SuccessHeader).println(' for details.)'
     )
-    versionOverride = '5.0.7-LE'
+    versionOverride = '5.0.8'
     identifiedVersion = versionOverride
 }
 version = identifiedVersion
